--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-router-dom": "^6.26.1",
     "react-toastify": "^10.0.5",
     "recharts": "^2.13.3",
+    "sweetalert2": "^11.14.5",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
